--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -24,11 +24,11 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:5
 msgid "Brief Tour of the Standard Library"
-msgstr "Breve Recorrido por la Biblioteca Estándar"
+msgstr "Breve recorrido por la Biblioteca Estándar"
 
 #: ../Doc/tutorial/stdlib.rst:11
 msgid "Operating System Interface"
-msgstr "Interfaz del Sistema Operativo"
+msgstr "Interfaz del sistema operativo"
 
 #: ../Doc/tutorial/stdlib.rst:13
 msgid ""
@@ -115,7 +115,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:97
 msgid "Error Output Redirection and Program Termination"
-msgstr "Desvío de Error de salida y Terminación del Programa"
+msgstr "Desvío de error de salida y Terminación del Programa"
 
 #: ../Doc/tutorial/stdlib.rst:99
 msgid ""
@@ -123,7 +123,7 @@ msgid ""
 "*stderr*. The latter is useful for emitting warnings and error messages to "
 "make them visible even when *stdout* has been redirected::"
 msgstr ""
-"El módulo :mod:`sys` también sus tiene atributos para *stdin*, *stdout*, y "
+"El módulo :mod:`sys` también tiene sus atributos para *stdin*, *stdout*, y "
 "*stderr*.  Este último es útil para emitir mensajes de alerta y error para "
 "que se vean incluso cuando se haya redirigido *stdout*::"
 
@@ -133,7 +133,7 @@ msgstr "La forma más directa de terminar un programa es usar ``sys.exit()``."
 
 #: ../Doc/tutorial/stdlib.rst:112
 msgid "String Pattern Matching"
-msgstr "Coincidencia de Patrones de Cadena"
+msgstr "Coincidencia de patrones de cadena"
 
 #: ../Doc/tutorial/stdlib.rst:114
 msgid ""
@@ -210,7 +210,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:206
 msgid "Dates and Times"
-msgstr "Fechas y Tiempos"
+msgstr "Fechas y tiempos"
 
 #: ../Doc/tutorial/stdlib.rst:208
 msgid ""
@@ -222,13 +222,13 @@ msgid ""
 msgstr ""
 "El módulo :mod:`datetime` ofrece clases para gestionar fechas y tiempos "
 "tanto de manera simple como compleja.  Aunque soporta aritmética sobre "
-"fechas y tiempos, la aplicación se centra en la extracción eficaz de "
+"fechas y tiempos, la aplicación se centra en la extracción eficiente de "
 "elementos para el formateo y la manipulación de los datos de salida.  El "
 "módulo también admite objetos que tienen en cuenta la zona horaria. ::"
 
 #: ../Doc/tutorial/stdlib.rst:232
 msgid "Data Compression"
-msgstr "Compresión de Datos"
+msgstr "Compresión de datos"
 
 #: ../Doc/tutorial/stdlib.rst:234
 msgid ""
@@ -242,7 +242,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:254
 msgid "Performance Measurement"
-msgstr "Medición de Rendimiento"
+msgstr "Medición de rendimiento"
 
 #: ../Doc/tutorial/stdlib.rst:256
 msgid ""
@@ -278,7 +278,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:278
 msgid "Quality Control"
-msgstr "Control de Calidad"
+msgstr "Control de calidad"
 
 #: ../Doc/tutorial/stdlib.rst:280
 msgid ""
@@ -319,7 +319,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:324
 msgid "Batteries Included"
-msgstr "Pilas Incluidas"
+msgstr "Pilas incluidas"
 
 #: ../Doc/tutorial/stdlib.rst:326
 msgid ""
