Apply sugestions to  tutorial/stdlib.po
All feedback has been taken into account for the translation.

--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -384,7 +384,7 @@ msgid ""
 "providing a persistent database that can be updated and accessed using "
 "slightly nonstandard SQL syntax."
 msgstr ""
-"El módulo :mod:`sqlite3` es un empaquetador de la biblioteca de bases de "
+"El módulo :mod:`sqlite3` es un wrapper de la biblioteca de bases de "
 "datos SQLite, que proporciona una base de datos constante que se puede "
 "actualizar y a la que se puede acceder utilizando una sintaxis SQL "
 "ligeramente no estándar."
