Agrego palabras nuevas a los diccionarios

--- a/c-api/buffer.po
+++ b/c-api/buffer.po
@@ -615,6 +615,7 @@ msgstr ""
 "explícitamente, con y sin información de paso. Sin información de paso, el "
 "búfer debe ser C-contiguo."
 
+# NOTE: Sera arreglado en 3.12.1?
 #: ../Doc/c-api/buffer.rst:306 ../Doc/c-api/buffer.rst:331
 msgid "contig"
 msgstr "contig"
