Fix fuzzy entries and last translations whatsnew/2.5
Closes #2638

--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
 "PO-Revision-Date: 2022-11-24 11:54+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
 
 #: ../Doc/whatsnew/2.5.rst:3
@@ -1611,18 +1611,17 @@ msgstr ""
 "`TypeError` si no se cumple este requisito."
 
 #: ../Doc/whatsnew/2.5.rst:957
-#, fuzzy
 msgid ""
 "A corresponding :c:member:`~PyNumberMethods.nb_index` slot was added to the "
 "C-level :c:type:`PyNumberMethods` structure to let C extensions implement "
 "this protocol. ``PyNumber_Index(obj)`` can be used in extension code to call "
 "the :meth:`__index__` function and retrieve its result."
 msgstr ""
-"Se ha añadido la correspondiente ranura :attr:`nb_index` a la estructura :c:"
-"type:`PyNumberMethods` de nivel C para que las extensiones C puedan "
-"implementar este protocolo. El código de la extensión puede utilizar "
-"``PyNumber_Index(obj)`` para llamar a la función :meth:`__index__` y obtener "
-"su resultado."
+"Se agregó una ranura :c:member:`~PyNumberMethods.nb_index` correspondiente a "
+"la estructura :c:type:`PyNumberMethods` de nivel C para permitir que las "
+"extensiones C implementen este protocolo. ``PyNumber_Index(obj)`` se puede "
+"utilizar en código de extensión para llamar a la función :meth:`__index__` y "
+"recuperar su resultado."
 
 #: ../Doc/whatsnew/2.5.rst:965
 msgid ":pep:`357` - Allowing Any Object to be Used for Slicing"
@@ -2502,16 +2501,15 @@ msgstr ""
 "precisión)"
 
 #: ../Doc/whatsnew/2.5.rst:1451
-#, fuzzy
 msgid ""
 "Constants named :const:`os.SEEK_SET`, :const:`os.SEEK_CUR`, and :const:`os."
 "SEEK_END` have been added; these are the parameters to the :func:`os.lseek` "
 "function.  Two new constants for locking are :const:`os.O_SHLOCK` and :const:"
 "`os.O_EXLOCK`."
 msgstr ""
-"Se han añadido las constantes :attr:`os.SEEK_SET`, :attr:`os.SEEK_CUR` y :"
-"attr:`os.SEEK_END`, que son los parámetros de la función :func:`os.lseek`.  "
-"Dos nuevas constantes para el bloqueo son :attr:`os.O_SHLOCK` y :attr:`os."
+"Se han añadido las constantes :const:`os.SEEK_SET`, :const:`os.SEEK_CUR` y :"
+"const:`os.SEEK_END`, que son los parámetros de la función :func:`os.lseek`.  "
+"Dos nuevas constantes para el bloqueo son :const:`os.O_SHLOCK` y :const:`os."
 "O_EXLOCK`."
 
 #: ../Doc/whatsnew/2.5.rst:1456
@@ -2846,7 +2844,6 @@ msgstr ""
 "threading y OS/2 lo hacen. (Contribución de Andrew MacIntyre)"
 
 #: ../Doc/whatsnew/2.5.rst:1603
-#, fuzzy
 msgid ""
 "The :mod:`unicodedata` module has been updated to use version 4.1.0 of the "
 "Unicode character database.  Version 3.2.0 is required  by some "
@@ -2855,7 +2852,7 @@ msgstr ""
 "El módulo :mod:`unicodedata` ha sido actualizado para utilizar la versión "
 "4.1.0 de la base de datos de caracteres Unicode.  La versión 3.2.0 es "
 "requerida por algunas especificaciones, por lo que sigue estando disponible "
-"como :attr:`unicodedata.ucd_3_2_0`."
+"como :data:`unicodedata.ucd_3_2_0`."
 
 #: ../Doc/whatsnew/2.5.rst:1607
 msgid ""
@@ -3666,7 +3663,6 @@ msgstr ""
 "parámetro *flags*::"
 
 #: ../Doc/whatsnew/2.5.rst:2117
-#, fuzzy
 msgid ""
 "No official documentation has been written for the AST code yet, but :pep:"
 "`339` discusses the design.  To start learning about the code, read the "
@@ -3684,10 +3680,10 @@ msgstr ""
 "definición de los distintos nodos AST en :file:`Parser/Python.asdl`.  Un "
 "script de Python lee este archivo y genera un conjunto de definiciones de "
 "estructuras C en :file:`Include/Python-ast.h`.  Las funciones :c:func:"
-"`PyParser_ASTFromString` y :c:func:`PyParser_ASTFromFile`, definidas en :"
+"`PyParser_ASTFromString` y :c:func:`!PyParser_ASTFromFile`, definidas en :"
 "file:`Include/pythonrun.h`, toman el código fuente de Python como entrada y "
 "devuelven la raíz de un AST que representa el contenido. Este AST puede "
-"convertirse en un objeto de código mediante :c:func:`PyAST_Compile`.  Para "
+"convertirse en un objeto de código mediante :c:func:`!PyAST_Compile`.  Para "
 "más información, lea el código fuente, y luego haga preguntas en python-dev."
 
 #: ../Doc/whatsnew/2.5.rst:2127
@@ -3743,7 +3739,6 @@ msgstr ""
 "objetos de Python."
 
 #: ../Doc/whatsnew/2.5.rst:2152
-#, fuzzy
 msgid ""
 "Previously these different families all reduced to the platform's :c:func:"
 "`malloc` and :c:func:`free` functions.  This meant  it didn't matter if you "
@@ -3755,12 +3750,11 @@ msgid ""
 msgstr ""
 "Anteriormente estas diferentes familias se reducían a las funciones :c:func:"
 "`malloc` y :c:func:`free` de la plataforma.  Esto significaba que no "
-"importaba si te equivocabas y asignabas memoria con la función :c:func:"
-"`PyMem` pero la liberabas con la función :c:func:`PyObject`.  Con los "
-"cambios de la versión 2.5 en obmalloc, estas familias hacen ahora cosas "
-"diferentes y los desajustes probablemente darán lugar a un fallo de "
-"seguridad.  Deberías probar cuidadosamente tus módulos de extensión C con "
-"Python 2.5."
+"importaba si te equivocabas y asignabas memoria con la función ``PyMem`` "
+"pero la liberabas con la función ``PyObject``.  Con los cambios de la "
+"versión 2.5 en obmalloc, estas familias hacen ahora cosas diferentes y los "
+"desajustes probablemente darán lugar a un fallo de seguridad.  Deberías "
+"probar cuidadosamente tus módulos de extensión C con Python 2.5."
 
 #: ../Doc/whatsnew/2.5.rst:2159
 msgid ""
@@ -3790,7 +3784,6 @@ msgstr ""
 "Warsaw.)"
 
 #: ../Doc/whatsnew/2.5.rst:2170
-#, fuzzy
 msgid ""
 "Two new macros can be used to indicate C functions that are local to the "
 "current file so that a faster calling convention can be used. "
@@ -3808,7 +3801,7 @@ msgstr ""
 "llamada más rápida. ``Py_LOCAL(type)`` declara que la función devuelve un "
 "valor del *tipo* especificado y utiliza un calificador de llamada rápida. "
 "``Py_LOCAL_INLINE(type)`` hace lo mismo y también solicita que la función "
-"sea inline.  Si :c:func:`PY_LOCAL_AGGRESSIVE` se define antes de que se "
+"sea inline.  Si :c:macro:`!PY_LOCAL_AGGRESSIVE` se define antes de que se "
 "incluya :file:`python.h`, se habilita un conjunto de optimizaciones más "
 "agresivas para el módulo; debería comparar los resultados para averiguar si "
 "estas optimizaciones realmente hacen el código más rápido.  (Contribuido por "
@@ -3823,7 +3816,6 @@ msgstr ""
 "clases base como su argumento *base*.  (Contribuido por Georg Brandl.)"
 
 #: ../Doc/whatsnew/2.5.rst:2184
-#, fuzzy
 msgid ""
 "The :c:func:`!PyErr_Warn` function for issuing warnings is now deprecated in "
 "favour of ``PyErr_WarnEx(category, message, stacklevel)`` which lets you "
@@ -3831,7 +3823,7 @@ msgid ""
 "A *stacklevel* of 1 is the function calling :c:func:`PyErr_WarnEx`, 2 is the "
 "function above that, and so forth.  (Added by Neal Norwitz.)"
 msgstr ""
-"La función :c:func:`PyErr_Warn` para emitir avisos está ahora obsoleta en "
+"La función :c:func:`!PyErr_Warn` para emitir avisos está ahora obsoleta en "
 "favor de ``PyErr_WarnEx(category, message, stacklevel)`` que permite "
 "especificar el número de marcos de pila que separan esta función y la que la "
 "llama.  Un *stacklevel* de 1 es la función que llama a :c:func:"
@@ -3849,17 +3841,16 @@ msgstr ""
 "por Anthony Baxter, Martin von Löwis, Skip Montanaro)"
 
 #: ../Doc/whatsnew/2.5.rst:2194
-#, fuzzy
 msgid ""
 "The :c:func:`!PyRange_New` function was removed.  It was never documented, "
 "never used in the core code, and had dangerously lax error checking.  In the "
 "unlikely case that your extensions were using it, you can replace it by "
 "something like the following::"
 msgstr ""
-"Se ha eliminado la función :c:func:`PyRange_New`.  Nunca se documentó, nunca "
-"se utilizó en el código del núcleo, y tenía una comprobación de errores "
-"peligrosamente laxa.  En el improbable caso de que sus extensiones la "
-"utilizaran, puede sustituirla por algo como lo siguiente::"
+"Se ha eliminado la función :c:func:`!PyRange_New`.  Nunca se documentó, "
+"nunca se utilizó en el código del núcleo, y tenía una comprobación de "
+"errores peligrosamente laxa.  En el improbable caso de que sus extensiones "
+"la utilizaran, puede sustituirla por algo como lo siguiente::"
 
 #: ../Doc/whatsnew/2.5.rst:2208
 msgid "Port-Specific Changes"
@@ -4041,8 +4032,8 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.5.rst:1342
 msgid "universal newlines"
-msgstr ""
+msgstr "nuevas líneas universales"
 
 #: ../Doc/whatsnew/2.5.rst:1342
 msgid "What's new"
-msgstr ""
+msgstr "Qué hay de nuevo"
