--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
 "PO-Revision-Date: 2021-10-28 11:57+0200\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
 
 #: ../Doc/whatsnew/2.4.rst:3
@@ -1199,7 +1199,6 @@ msgstr ""
 "`double` en una cadena ASCII."
 
 #: ../Doc/whatsnew/2.4.rst:758
-#, fuzzy
 msgid ""
 "The code for these functions came from the GLib library (https://developer-"
 "old.gnome.org/glib/2.26/), whose developers kindly relicensed the relevant "
@@ -1208,10 +1207,10 @@ msgid ""
 "as GTK+  produce the correct results."
 msgstr ""
 "El código para estas funciones proviene desde la librería GLib  (https://"
-"developer.gnome.org/glib/stable/) cuyos desarrolladores amablemente han "
+"developer-old.gnome.org/glib/2.26/) cuyos desarrolladores amablemente han "
 "residenciado las funciones relevantes y las han donado a la fundación de "
 "software Python. El módulo :mod:`locale` ahora puede cambiar la "
-"configuración local, dejando que las extensiones como GTK¿ produzcan los "
+"configuración local, dejando que las extensiones como GTK+ produzcan los "
 "resultados correctos."
 
 #: ../Doc/whatsnew/2.4.rst:767
@@ -2417,7 +2416,6 @@ msgstr ""
 "*X* es un NaN. (Aportado por Tim Peters.)"
 
 #: ../Doc/whatsnew/2.4.rst:1470
-#, fuzzy
 msgid ""
 "C code can avoid unnecessary locking by using the new :c:func:`!"
 "PyEval_ThreadsInitialized` function to tell  if any thread operations have "
@@ -2425,7 +2423,7 @@ msgid ""
 "needed. (Contributed by Nick Coghlan.)"
 msgstr ""
 "El código C puede evitar el bloqueo innecesario mediante el uso de la nueva "
-"función :c:func:`PyEval_ThreadsInitialized` para saber si se ha realizado "
+"función :c:func:`!PyEval_ThreadsInitialized` para saber si se ha realizado "
 "alguna operación de subproceso. Si esta función devuelve falso, no se "
 "necesitan operaciones de bloqueo. (Contribuido por Nick Coghlan.)"
 
@@ -2440,14 +2438,13 @@ msgstr ""
 "de varios argumentos. (Contribuido por Greg Chapman.)"
 
 #: ../Doc/whatsnew/2.4.rst:1479
-#, fuzzy
 msgid ""
 "A new method flag, :c:macro:`METH_COEXIST`, allows a function defined in "
 "slots to co-exist with a :c:type:`PyCFunction` having the same name.  This "
 "can halve the access time for a method such as :meth:`set.__contains__`.  "
 "(Contributed by Raymond Hettinger.)"
 msgstr ""
-"Un nuevo indicador de método, :const:`METH_COEXISTS`, permite que una "
+"Un nuevo indicador de método, :c:macro:`METH_COEXISTS`, permite que una "
 "función definida en ranuras coexista con un :c:type:`PyCFunction` que tiene "
 "el mismo nombre. Esto puede reducir a la mitad el tiempo de acceso para un "
 "método como :meth:`set.__contains__`. (Contribuido por Raymond Hettinger.)"
@@ -2476,12 +2473,11 @@ msgstr ""
 "llama a ese registro\" el registro TSC \". (Contribuido por Jeremy Hylton.)"
 
 #: ../Doc/whatsnew/2.4.rst:1494
-#, fuzzy
 msgid ""
 "The :c:type:`!tracebackobject` type has been renamed to :c:type:"
 "`PyTracebackObject`."
 msgstr ""
-"El tipo :c:type:`tracebackobject` ha sido renombrado a :c:type:"
+"El tipo :c:type:`!tracebackobject` ha sido renombrado a :c:type:"
 "`PyTracebackObject`."
 
 #: ../Doc/whatsnew/2.4.rst:1501
@@ -2619,8 +2615,8 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:414
 msgid "universal newlines"
-msgstr ""
+msgstr "nuevas líneas universales"
 
 #: ../Doc/whatsnew/2.4.rst:414
 msgid "What's new"
-msgstr ""
+msgstr "Qué hay de nuevo"
