--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
 "PO-Revision-Date: 2021-09-25 10:30+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
 
 #: ../Doc/whatsnew/2.3.rst:3
@@ -329,7 +329,6 @@ msgstr ""
 "un tablero de ajedrez $NxN$ sin visitar ninguna casilla dos veces)."
 
 #: ../Doc/whatsnew/2.3.rst:220
-#, fuzzy
 msgid ""
 "The idea of generators comes from other programming languages, especially "
 "Icon (https://www2.cs.arizona.edu/icon/), where the idea of generators is "
@@ -339,10 +338,10 @@ msgid ""
 "of what this looks like::"
 msgstr ""
 "La idea de los generadores proviene de otros lenguajes de programación, "
-"especialmente de Icon (https://www.cs.arizona.edu/icon/), donde la idea de "
+"especialmente de Icon (https://www2.cs.arizona.edu/icon/), donde la idea de "
 "los generadores es fundamental.  En Icon, cada expresión y llamada a una "
 "función se comporta como un generador.  Un ejemplo de \"*An Overview of the "
-"Icon Programming Language*\" en https://www.cs.arizona.edu/icon/docs/ipd266."
+"Icon Programming Language*\" en https://www2.cs.arizona.edu/icon/docs/ipd266."
 "htm da una idea de cómo es esto::"
 
 #: ../Doc/whatsnew/2.3.rst:230
@@ -1134,7 +1133,6 @@ msgstr ""
 "lista."
 
 #: ../Doc/whatsnew/2.3.rst:729
-#, fuzzy
 msgid ""
 "Importer objects must have a single method, ``find_module(fullname, "
 "path=None)``.  *fullname* will be a module or package name, e.g. ``string`` "
@@ -1144,7 +1142,7 @@ msgid ""
 msgstr ""
 "Los objetos importadores deben tener un único método, "
 "``find_module(fullname, path=None)``.  *fullname* será un nombre de módulo o "
-"paquete, por ejemplo ``string`` o ``distutils.core``. :meth:`find_module` "
+"paquete, por ejemplo ``string`` o ``distutils.core``. :meth:`!find_module` "
 "debe retornar un objeto cargador que tenga un único método, "
 "``load_module(fullname)``, que cree y retorne el objeto módulo "
 "correspondiente."
@@ -2114,7 +2112,6 @@ msgid "(Contributed by Kevin O'Connor.)"
 msgstr "(Contribución de Kevin O'Connor.)"
 
 #: ../Doc/whatsnew/2.3.rst:1334
-#, fuzzy
 msgid ""
 "The IDLE integrated development environment has been updated using the code "
 "from the IDLEfork project (https://idlefork.sourceforge.net).  The most "
@@ -2418,13 +2415,12 @@ msgstr ""
 "Secure Sockets Layer (SSL)."
 
 #: ../Doc/whatsnew/2.3.rst:1477
-#, fuzzy
 msgid ""
 "The value of the C :c:macro:`PYTHON_API_VERSION` macro is now exposed at the "
 "Python level as ``sys.api_version``.  The current exception can be cleared "
 "by calling the new :func:`sys.exc_clear` function."
 msgstr ""
-"El valor de la macro C :const:`PYTHON_API_VERSION` ahora se expone en el "
+"El valor de la macro C :c:macro:`PYTHON_API_VERSION` ahora se expone en el "
 "nivel de Python como ``sys.api_version``. La excepción actual se puede "
 "borrar llamando a la nueva función :func:`sys.exc_clear`."
 
@@ -2986,13 +2982,12 @@ msgstr ""
 "`PyObject_Realloc` y :c:func:`PyObject_Free`."
 
 #: ../Doc/whatsnew/2.3.rst:1849
-#, fuzzy
 msgid ""
 "To allocate and free Python objects, use the \"object\" family :c:macro:"
 "`PyObject_New`, :c:macro:`PyObject_NewVar`, and :c:func:`PyObject_Del`."
 msgstr ""
 "Para asignar y liberar objetos de Python, utilice la familia de \"objetos\" :"
-"c:func:`PyObject_New`, :c:func:`PyObject_NewVar` y :c:func:`PyObject_Del`."
+"c:macro:`PyObject_New`, :c:macro:`PyObject_NewVar` y :c:func:`PyObject_Del`."
 
 #: ../Doc/whatsnew/2.3.rst:1852
 msgid ""
@@ -3072,7 +3067,6 @@ msgstr ""
 "Palkovsky.)"
 
 #: ../Doc/whatsnew/2.3.rst:1889
-#, fuzzy
 msgid ""
 "The :c:macro:`!DL_EXPORT` and :c:macro:`!DL_IMPORT` macros are now "
 "deprecated. Initialization functions for Python extension modules should now "
@@ -3080,11 +3074,11 @@ msgid ""
 "core will generally use the :c:macro:`!PyAPI_FUNC` and :c:macro:`!"
 "PyAPI_DATA` macros."
 msgstr ""
-"Las macros :c:macro:`DL_EXPORT` y :c:macro:`DL_IMPORT` ahora están en "
+"Las macros :c:macro:`!DL_EXPORT` y :c:macro:`!DL_IMPORT` ahora están en "
 "desuso. Las funciones de inicialización para los módulos de extensión de "
 "Python ahora deben declararse usando la nueva macro :c:macro:"
 "`PyMODINIT_FUNC`, mientras que el núcleo de Python generalmente usará las "
-"macros :c:macro:`PyAPI_FUNC` y :c:macro:`PyAPI_DATA`."
+"macros :c:macro:`!PyAPI_FUNC` y :c:macro:`!PyAPI_DATA`."
 
 #: ../Doc/whatsnew/2.3.rst:1894
 #, python-format
@@ -3103,7 +3097,6 @@ msgstr ""
 "Niemeyer.)"
 
 #: ../Doc/whatsnew/2.3.rst:1900
-#, fuzzy
 msgid ""
 "The :c:func:`!PyArg_NoArgs` macro is now deprecated, and code that uses it "
 "should be changed.  For Python 2.2 and later, the method definition table "
@@ -3113,13 +3106,13 @@ msgid ""
 "``PyArg_ParseTuple(args, \"\")`` instead, but this will be slower than "
 "using :c:macro:`METH_NOARGS`."
 msgstr ""
-"La macro :c:func:`PyArg_NoArgs` ahora está en desuso y el código que la usa "
+"La macro :c:func:`!PyArg_NoArgs` ahora está en desuso y el código que la usa "
 "debe cambiarse. Para Python 2.2 y versiones posteriores, la tabla de "
-"definición de métodos puede especificar la marca :const:`METH_NOARGS`, lo "
+"definición de métodos puede especificar la marca :c:macro:`METH_NOARGS`, lo "
 "que indica que no hay argumentos, y luego se puede eliminar la verificación "
 "de argumentos. Si la compatibilidad con las versiones anteriores a la 2.2 de "
 "Python es importante, el código podría usar ``PyArg_ParseTuple(args, \"\")`` "
-"en su lugar, pero esto será más lento que usar :const:`METH_NOARGS`."
+"en su lugar, pero esto será más lento que usar :c:macro:`METH_NOARGS`."
 
 #: ../Doc/whatsnew/2.3.rst:1907
 msgid ""
@@ -3155,14 +3148,13 @@ msgstr ""
 "según una medición)."
 
 #: ../Doc/whatsnew/2.3.rst:1920
-#, fuzzy
 msgid ""
 "It's now possible to define class and static methods for a C extension type "
 "by setting either the :c:macro:`METH_CLASS` or :c:macro:`METH_STATIC` flags "
 "in a method's :c:type:`PyMethodDef` structure."
 msgstr ""
 "Ahora es posible definir métodos estáticos y de clase para un tipo de "
-"extensión C configurando los indicadores :const:`METH_CLASS` o :const:"
+"extensión C configurando los indicadores :c:macro:`METH_CLASS` o :c:macro:"
 "`METH_STATIC` en la estructura :c:type:`PyMethodDef` de un método."
 
 #: ../Doc/whatsnew/2.3.rst:1924
@@ -3512,10 +3504,9 @@ msgstr ""
 "Roman Suzi, Jason Tishler, Just van Rossum."
 
 #: ../Doc/whatsnew/2.3.rst:371
-#, fuzzy
 msgid "universal newlines"
-msgstr "PEP 278: Soporte universal de nuevas líneas"
+msgstr "saltos de línea universal"
 
 #: ../Doc/whatsnew/2.3.rst:371
 msgid "What's new"
-msgstr ""
+msgstr "Qué hay de nuevo"
