Fix fuzzy entries and last translations whatsnew/3.8
Closes #2634

--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -11,12 +11,12 @@ msgstr ""
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
 "PO-Revision-Date: 2022-10-28 00:58+0200\n"
 "Last-Translator: Jaime Resano <resano.138736@e.unavarra.es>\n"
-"Language: es_ES\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
 
 #: ../Doc/whatsnew/3.8.rst:3
@@ -125,7 +125,6 @@ msgid "Positional-only parameters"
 msgstr "Parámetros solo posicionales"
 
 #: ../Doc/whatsnew/3.8.rst:122
-#, fuzzy
 msgid ""
 "There is a new function parameter syntax ``/`` to indicate that some "
 "function parameters must be specified positionally and cannot be used as "
@@ -137,8 +136,7 @@ msgstr ""
 "indicar que algunos parámetros de función deben especificarse solo "
 "posicionalmente y no pueden usarse como argumentos por palabra clave. Esta "
 "es la misma notación que muestra ``help()`` para las funciones de C anotadas "
-"con la herramienta `Argument Clinic <https://docs.python.org/3/howto/clinic."
-"html>`_ de Larry Hastings."
+"con la herramienta :ref:`Argument Clinic <howto-clinic>` de Larry Hastings."
 
 #: ../Doc/whatsnew/3.8.rst:128
 msgid ""
@@ -703,13 +701,12 @@ msgstr ""
 "Storchaka en :issue:`20092`.)"
 
 #: ../Doc/whatsnew/3.8.rst:407
-#, fuzzy
 msgid ""
 "Added support of :samp:`\\\\N\\\\{{name}\\\\}` escapes in :mod:`regular "
 "expressions <re>`::"
 msgstr ""
-"Agregado soporte para escapes ``\\N{name}`` en :mod:`expresiones regulares "
-"<re>`::"
+"Agregado soporte para escapes :samp:`\\\\N\\\\{{name}\\\\}` en :mod:"
+"`expresiones regulares <re>`::"
 
 #: ../Doc/whatsnew/3.8.rst:414
 msgid ""
@@ -1546,7 +1543,6 @@ msgstr ""
 "notas de Jupyter."
 
 #: ../Doc/whatsnew/3.8.rst:950
-#, fuzzy
 msgid ""
 "(Suggested by Raymond Hettinger, implemented by Donghee Na, and reviewed by "
 "Vinay Sajip in :issue:`33897`.)"
@@ -1820,6 +1816,11 @@ msgid ""
 "``hardlink_to`` method added in 3.10 which matches the semantics of the "
 "existing ``symlink_to`` method."
 msgstr ""
+"Se agregó :meth:`pathlib.Path.link_to()` que crea un vínculo físico que "
+"apunta a una ruta. (Contribución de Joannah Nanjekye en :issue:`26978`) "
+"Tenga en cuenta que ``link_to`` quedó obsoleto en 3.10 y se eliminó en 3.12 "
+"en favor de un método ``hardlink_to`` agregado en 3.10 que coincide con la "
+"semántica del método ``symlink_to`` existente."
 
 #: ../Doc/whatsnew/3.8.rst:1098
 msgid "pickle"
@@ -2159,12 +2160,11 @@ msgid "time"
 msgstr "time"
 
 #: ../Doc/whatsnew/3.8.rst:1308
-#, fuzzy
 msgid ""
 "Added new clock :const:`~time.CLOCK_UPTIME_RAW` for macOS 10.12. "
 "(Contributed by Joannah Nanjekye in :issue:`35702`.)"
 msgstr ""
-"Se ha agregado el nuevo reloj :data:`~time.CLOCK_UPTIME_RAW` para macOS "
+"Se ha agregado el nuevo reloj :const:`~time.CLOCK_UPTIME_RAW` para macOS "
 "10.12. (Contribución de Joannah Nanjekye en :issue:`35702`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1313
@@ -2711,28 +2711,26 @@ msgid ":c:func:`PyObject_INIT`, :c:func:`PyObject_INIT_VAR`"
 msgstr ":c:func:`PyObject_INIT`, :c:func:`PyObject_INIT_VAR`"
 
 #: ../Doc/whatsnew/3.8.rst:1577
-#, fuzzy
 msgid ""
 "Private functions: :c:func:`!_PyObject_GC_TRACK`, :c:func:`!"
 "_PyObject_GC_UNTRACK`, :c:func:`!_Py_Dealloc`"
 msgstr ""
-"Funciones privadas: :c:func:`_PyObject_GC_TRACK`, :c:func:"
-"`_PyObject_GC_UNTRACK`, :c:func:`_Py_Dealloc`"
+"Funciones privadas: :c:func:`!_PyObject_GC_TRACK`, :c:func:`!"
+"_PyObject_GC_UNTRACK`, :c:func:`!_Py_Dealloc`"
 
 #: ../Doc/whatsnew/3.8.rst:1580
 msgid "(Contributed by Victor Stinner in :issue:`35059`.)"
 msgstr "(Contribución de Victor Stinner en :issue:`35059`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1582
-#, fuzzy
 msgid ""
 "The :c:func:`!PyByteArray_Init` and :c:func:`!PyByteArray_Fini` functions "
 "have been removed. They did nothing since Python 2.7.4 and Python 3.2.0, "
 "were excluded from the limited API (stable ABI), and were not documented. "
 "(Contributed by Victor Stinner in :issue:`35713`.)"
 msgstr ""
-"Las funciones :c:func:`PyByteArray_Init` y :c:func:`PyByteArray_Fini` se han "
-"eliminado. No eran de utilidad desde Python 2.7.4 y Python 3.2.0, cuando "
+"Las funciones :c:func:`!PyByteArray_Init` y :c:func:`!PyByteArray_Fini` se "
+"han eliminado. No eran de utilidad desde Python 2.7.4 y Python 3.2.0, cuando "
 "fueron excluidas de la API limitada (ABI estable) y dejaron de estar "
 "documentadas. (Contribución de Victor Stinner en :issue:`35713`.)"
 
@@ -2837,13 +2835,12 @@ msgstr ""
 "posicionales."
 
 #: ../Doc/whatsnew/3.8.rst:1631
-#, fuzzy
 msgid ""
 ":c:func:`!Py_SetPath` now sets :data:`sys.executable` to the program full "
 "path (:c:func:`Py_GetProgramFullPath`) rather than to the program name (:c:"
 "func:`Py_GetProgramName`). (Contributed by Victor Stinner in :issue:`38234`.)"
 msgstr ""
-":c:func:`Py_SetPath` ahora establece :data:`sys.executable` en la ruta "
+":c:func:`!Py_SetPath` ahora establece :data:`sys.executable` en la ruta "
 "completa del programa (:c:func:`Py_GetProgramFullPath`), en vez de en el "
 "nombre del programa (:c:func:`Py_GetProgramName`). (Contribución de Victor "
 "Stinner en :issue:`38234`.)"
@@ -3018,7 +3015,6 @@ msgstr ""
 "Serhiy Storchaka en :issue:`33710`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1715
-#, fuzzy
 msgid ""
 "The :meth:`~threading.Thread.isAlive()` method of :class:`threading.Thread` "
 "has been deprecated. (Contributed by Donghee Na in :issue:`35283`.)"
@@ -3321,7 +3317,6 @@ msgstr ""
 "`36793`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1842
-#, fuzzy
 msgid ""
 "On AIX, :data:`sys.platform` doesn't contain the major version anymore. It "
 "is always ``'aix'``, instead of ``'aix3'`` .. ``'aix7'``.  Since older "
@@ -3329,14 +3324,13 @@ msgid ""
 "use ``sys.platform.startswith('aix')``. (Contributed by M. Felt in :issue:"
 "`36588`.)"
 msgstr ""
-"En AIX, el atributo :attr:`sys.platform` ya no contiene la versión "
+"En AIX, el atributo :data:`sys.platform` ya no contiene la versión "
 "principal. Es decir, siempre es ``'aix'``, en lugar de ``'aix3'`` .. "
 "``'aix7'``. Dado que las versiones anteriores de Python incluyen el número "
 "de versión, se recomienda usar siempre ``sys.platform.startswith('aix')``. "
 "(Contribución de M. Felt en :issue:`36588`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1848
-#, fuzzy
 msgid ""
 ":c:func:`!PyEval_AcquireLock` and :c:func:`!PyEval_AcquireThread` now "
 "terminate the current thread if called while the interpreter is finalizing, "
@@ -3345,12 +3339,12 @@ msgid ""
 "not desired, guard the call by checking :c:func:`!_Py_IsFinalizing` or :func:"
 "`sys.is_finalizing`. (Contributed by Joannah Nanjekye in :issue:`36475`.)"
 msgstr ""
-":c:func:`PyEval_AcquireLock` y :c:func:`PyEval_AcquireThread` ahora terminan "
-"el hilo actual si se llaman mientras el intérprete está finalizando, "
-"haciéndolos consistentes con :c:func:`PyEval_RestoreThread`, :c:func:"
-"`Py_END_ALLOW_THREADS` y :c:func:`PyGILState_Ensure`. Si no se desea este "
-"comportamiento, se tiene que proteger la invocación comprobando :c:func:"
-"`_Py_IsFinalizing` o :c:func:`sys.is_finalizing`. (Contribución de Joannah "
+":c:func:`!PyEval_AcquireLock` y :c:func:`!PyEval_AcquireThread` ahora "
+"terminan el hilo actual si se llaman mientras el intérprete está "
+"finalizando, haciéndolos consistentes con :c:func:`PyEval_RestoreThread`, :c:"
+"func:`Py_END_ALLOW_THREADS` y :c:func:`PyGILState_Ensure`. Si no se desea "
+"este comportamiento, se tiene que proteger la invocación comprobando :c:func:"
+"`!_Py_IsFinalizing` o :c:func:`sys.is_finalizing`. (Contribución de Joannah "
 "Nanjekye en :issue:`36475`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1858
@@ -3700,14 +3694,13 @@ msgstr ""
 "Rossum en :issue:`35766`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2024
-#, fuzzy
 msgid ""
 "The :c:func:`!PyEval_ReInitThreads` function has been removed from the C "
 "API. It should not be called explicitly: use :c:func:`PyOS_AfterFork_Child` "
 "instead. (Contributed by Victor Stinner in :issue:`36728`.)"
 msgstr ""
-"La función :c:func:`PyEval_ReInitThreads` se ha eliminado de la API de C. No "
-"debe llamarse explícitamente: usa :c:func:`PyOS_AfterFork_Child` en su "
+"La función :c:func:`!PyEval_ReInitThreads` se ha eliminado de la API de C. "
+"No debe llamarse explícitamente: usa :c:func:`PyOS_AfterFork_Child` en su "
 "lugar. (Contribución de Victor Stinner en :issue:`36728`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2029
@@ -3786,7 +3779,6 @@ msgstr ""
 "cambios:"
 
 #: ../Doc/whatsnew/3.8.rst:2062
-#, fuzzy
 msgid ""
 "Remove :c:macro:`Py_INCREF` on the type object after allocating an instance "
 "- if any. This may happen after calling :c:macro:`PyObject_New`, :c:macro:"
@@ -3795,7 +3787,7 @@ msgid ""
 "`PyObject_INIT`."
 msgstr ""
 "Elimina :c:macro:`Py_INCREF` en el objeto de tipo después de asignar una "
-"instancia, si la hubiera. Esto puede suceder después de invocar a :c:func:"
+"instancia, si la hubiera. Esto puede suceder después de invocar a :c:macro:"
 "`PyObject_New`, :c:func:`PyObject_NewVar`, :c:func:`PyObject_GC_New`, :c:"
 "func:`PyObject_GC_NewVar`, o cualquier otro asignador personalizado que use :"
 "c:func:`PyObject_Init` o :c:func:`PyObject_INIT`."
@@ -3830,7 +3822,6 @@ msgid "(Contributed by Zackery Spytz in :issue:`33407`.)"
 msgstr "(Contribución de Zackery Spytz en :issue:`33407`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2115
-#, fuzzy
 msgid ""
 "The interpreter does not pretend to support binary compatibility of "
 "extension types across feature releases, anymore.  A :c:type:`PyTypeObject` "
@@ -3843,7 +3834,7 @@ msgstr ""
 "binaria de tipos de extensión entre versiones de características. Un :c:type:"
 "`PyTypeObject` exportado por un módulo de extensión de terceros se supone "
 "que tiene todas las ranuras esperadas por la versión actual de Python, "
-"incluyendo :c:member:`~PyTypeObject.tp_finalize` (:const:"
+"incluyendo :c:member:`~PyTypeObject.tp_finalize` (:c:macro:"
 "`Py_TPFLAGS_HAVE_FINALIZE` ya no se verifica antes de leer :c:member:"
 "`~PyTypeObject.tp_finalize`)."
 
@@ -3852,14 +3843,14 @@ msgid "(Contributed by Antoine Pitrou in :issue:`32388`.)"
 msgstr "(Contribución de Antoine Pitrou en :issue:`32388`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2124
-#, fuzzy
 msgid ""
 "The functions :c:func:`!PyNode_AddChild` and :c:func:`!PyParser_AddToken` "
 "now accept two additional ``int`` arguments *end_lineno* and "
 "*end_col_offset*."
 msgstr ""
-"Las funciones :c:func:`PyNode_AddChild` y :c:func:`PyParser_AddToken` ahora "
-"aceptan dos argumentos ``int`` adicionales, *end_lineno* y *end_col_offset*."
+"Las funciones :c:func:`!PyNode_AddChild` y :c:func:`!PyParser_AddToken` "
+"ahora aceptan dos argumentos ``int`` adicionales, *end_lineno* y "
+"*end_col_offset*."
 
 #: ../Doc/whatsnew/3.8.rst:2127
 msgid ""
@@ -3975,7 +3966,6 @@ msgstr ""
 "Python 3.3:"
 
 #: ../Doc/whatsnew/3.8.rst:2228
-#, fuzzy
 msgid ""
 "The benchmarks were measured on an `Intel® Core™ i7-4960HQ processor "
 "<https://ark.intel.com/content/www/us/en/ark/products/76088/intel-core-"
@@ -3987,7 +3977,7 @@ msgstr ""
 "i7-4960HQ <https://ark.intel.com/content/www/us/en/ark/products/76088/intel-"
 "core-i7-4960hq-processor-6m-cache-up-to-3-80-ghz.html>`_ ejecutando las "
 "compilaciones de 64-bits para macOS disponibles en `python.org <https://www."
-"python.org/downloads/mac-osx/>`_. El script de evaluación de rendimiento "
+"python.org/downloads/macos/>`_. El script de evaluación de rendimiento "
 "muestra los tiempos en nanosegundos."
 
 #: ../Doc/whatsnew/3.8.rst:2237
