--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -4567,8 +4567,8 @@ msgid ""
 ":c:macro:`!PyUnicode_AS_UNICODE`, :c:func:`!PyUnicode_AsUnicode`, :c:func:`!"
 "PyUnicode_AsUnicodeAndSize`: use :c:func:`PyUnicode_AsWideCharString`"
 msgstr ""
-":c:macro:`!PyUnicode_AS_UNICODE`, :c:func:`PyUnicode_AsUnicode`, :c:func:`!"
-"PyUnicode_AsUnicodeAndSize`: use :c:func:`PyUnicode_AsWideCharString`"
+":c:macro:`!PyUnicode_AS_UNICODE`, :c:func:`!PyUnicode_AsUnicode`, :c:func:`!"
+"PyUnicode_AsUnicodeAndSize`: usa :c:func:`PyUnicode_AsWideCharString`"
 
 #: ../Doc/whatsnew/3.3.rst:2277
 msgid ""
