--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -193,7 +193,7 @@ msgid ""
 msgstr ""
 "Las series 3xxx de PEP, que contienen propuestas para Python 3.0. :pep:"
 "`3000` describe el proceso de desarrollo de Python 3.0. Empiece con :pep:"
-"`3100` que describe los objetivos generales de Python 3.0, y luego explora "
+"`3100` que describe los objetivos generales de Python 3.0, y luego explore "
 "los PEPS con números más altos que proponen características específicas."
 
 #: ../Doc/whatsnew/2.6.rst:136
