Fix fuzzy entries and last translations whatsnew/2.6 (#2655)
Closes #2640

---------

Co-authored-by: rtobar <rtobarc@gmail.com>

--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
 "PO-Revision-Date: 2021-09-27 14:39-0300\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
 
 #: ../Doc/whatsnew/2.6.rst:5
@@ -185,7 +185,6 @@ msgstr ""
 "para el código de extensión C como :c:data:`Py_Py3kWarningFlag`."
 
 #: ../Doc/whatsnew/2.6.rst:128
-#, fuzzy
 msgid ""
 "The 3\\ *xxx* series of PEPs, which contains proposals for Python 3.0. :pep:"
 "`3000` describes the development process for Python 3.0. Start with :pep:"
@@ -272,7 +271,6 @@ msgstr ""
 "error/parche para cada cambio."
 
 #: ../Doc/whatsnew/2.6.rst:174
-#, fuzzy
 msgid ""
 "Hosting of the Python bug tracker is kindly provided by `Upfront Systems "
 "<https://upfrontsoftware.co.za>`__ of Stellenbosch, South Africa.  Martin "
@@ -281,10 +279,10 @@ msgid ""
 "python.org/view/tracker/importer/`` and may be useful to other projects "
 "wishing to move from SourceForge to Roundup."
 msgstr ""
-"`Upfront Systems <http://www.upfrontsoftware.co.za>`__ de Stellenbosch, "
+"`Upfront Systems <https://upfrontsoftware.co.za>`__ de Stellenbosch, "
 "Sudáfrica, proporciona amablemente el alojamiento del rastreador de errores "
 "de Python. Martin von Löwis se esforzó mucho en importar errores y parches "
-"existentes de SourceForge; sus scripts para esta operación de importación "
+"existentes desde SourceForge; Sus scripts para esta operación de importación "
 "están en ``https://svn.python.org/view/tracker/importer/`` y pueden ser "
 "útiles para otros proyectos que deseen pasar de SourceForge a Roundup."
 
@@ -1500,7 +1498,6 @@ msgstr ""
 "Unicode::"
 
 #: ../Doc/whatsnew/2.6.rst:979
-#, fuzzy
 msgid ""
 "At the C level, Python 3.0 will rename the existing 8-bit string type, "
 "called :c:type:`!PyStringObject` in Python 2.x, to :c:type:`PyBytesObject`.  "
@@ -1510,7 +1507,7 @@ msgid ""
 "with strings."
 msgstr ""
 "A nivel de C, Python 3.0 renombrará el tipo de cadena de 8 bits existente, "
-"llamado :c:type:`PyStringObject` en Python 2.x, a :c:type:`PyBytesObject`.  "
+"llamado :c:type:`!PyStringObject` en Python 2.x, a :c:type:`PyBytesObject`.  "
 "Python 2.6 utiliza ``#define`` para soportar el uso de los nombres :c:func:"
 "`PyBytesObject`, :c:func:`PyBytes_Check`, :c:func:"
 "`PyBytes_FromStringAndSize`, y todas las demás funciones y macros utilizadas "
@@ -1773,26 +1770,23 @@ msgstr ""
 "restricciones de la memoria devuelta.  Algunos ejemplos son:"
 
 #: ../Doc/whatsnew/2.6.rst:1141
-#, fuzzy
 msgid ":c:macro:`PyBUF_WRITABLE` indicates that the memory must be writable."
-msgstr ":const:`PyBUF_WRITABLE` indica que la memoria debe ser escribible."
+msgstr ":c:macro:`PyBUF_WRITABLE` indica que la memoria debe ser grabable."
 
 #: ../Doc/whatsnew/2.6.rst:1143
-#, fuzzy
 msgid ""
 ":c:macro:`PyBUF_LOCK` requests a read-only or exclusive lock on the memory."
 msgstr ""
-":const:`PyBUF_LOCK` solicita un bloqueo de sólo lectura o exclusivo en la "
+":c:macro:`PyBUF_LOCK` solicita un bloqueo de sólo lectura o exclusivo en la "
 "memoria."
 
 #: ../Doc/whatsnew/2.6.rst:1145
-#, fuzzy
 msgid ""
 ":c:macro:`PyBUF_C_CONTIGUOUS` and :c:macro:`PyBUF_F_CONTIGUOUS` requests a C-"
 "contiguous (last dimension varies the fastest) or Fortran-contiguous (first "
 "dimension varies the fastest) array layout."
 msgstr ""
-":const:`PyBUF_C_CONTIGUOUS` y :const:`PyBUF_F_CONTIGUOUS` solicitan una "
+":c:macro:`PyBUF_C_CONTIGUOUS` y :c:macro:`PyBUF_F_CONTIGUOUS` solicitan una "
 "disposición de matriz contigua en C (la última dimensión varía más "
 "rápidamente) o contigua en Fortran (la primera dimensión varía más "
 "rápidamente)."
@@ -2189,14 +2183,14 @@ msgstr ""
 "html_node/Numerical-Tower.html#Numerical-Tower>`__, del manual de Guile."
 
 #: ../Doc/whatsnew/2.6.rst:1436
-#, fuzzy
 msgid ""
 "`Scheme's number datatypes <https://conservatory.scheme.org/schemers/"
 "Documents/Standards/R5RS/HTML/r5rs-Z-H-9.html#%_sec_6.2>`__ from the R5RS "
 "Scheme specification."
 msgstr ""
-"`Scheme's number datatypes <https://schemers.org/Documents/Standards/R5RS/"
-"HTML/r5rs-Z-H-9.html#%_sec_6.2>`__ de la especificación del esquema R5RS."
+"`Scheme's number datatypes <https://conservatory.scheme.org/schemers/"
+"Documents/Standards/R5RS/HTML/r5rs-Z-H-9.html#%_sec_6.2>`__ de la "
+"especificación del esquema R5RS."
 
 #: ../Doc/whatsnew/2.6.rst:1440
 msgid "The :mod:`fractions` Module"
@@ -2922,19 +2916,17 @@ msgstr ""
 "con el Anexo 'G' del estándar C99."
 
 #: ../Doc/whatsnew/2.6.rst:1853
-#, fuzzy
 msgid ""
 "A new data type in the :mod:`collections` module: ``namedtuple(typename, "
 "fieldnames)`` is a factory function that creates subclasses of the standard "
 "tuple whose fields are accessible by name as well as index.  For example::"
 msgstr ""
-"Un nuevo tipo de datos en el módulo :mod:`collections`: :class:"
-"`namedtuple(typename, fieldnames)` es una función de fábrica que crea "
+"Un nuevo tipo de datos en el módulo :mod:`collections`: "
+"``namedtuple(typename, fieldnames)`` es una función de fábrica que crea "
 "subclases de la tupla estándar cuyos campos son accesibles tanto por nombre "
 "como por índice.  Por ejemplo::"
 
 #: ../Doc/whatsnew/2.6.rst:1875
-#, fuzzy
 msgid ""
 "Several places in the standard library that returned tuples have been "
 "modified to return :func:`namedtuple` instances.  For example, the :meth:"
@@ -2942,9 +2934,9 @@ msgid ""
 "`digits`, and :attr:`exponent` fields."
 msgstr ""
 "Varios lugares de la biblioteca estándar que devolvían tuplas han sido "
-"modificados para devolver instancias de :class:`namedtuple`.  Por ejemplo, "
-"el método :meth:`Decimal.as_tuple` ahora devuelve una tupla con nombre con "
-"los campos :attr:`signo`, :attr:`dígitos` y :attr:`exponente`."
+"modificados para devolver instancias de :func:`namedtuple`.  Por ejemplo, el "
+"método :meth:`Decimal.as_tuple` ahora devuelve una tupla con nombre con los "
+"campos :attr:`sign`, :attr:`digits` y :attr:`exponent`."
 
 #: ../Doc/whatsnew/2.6.rst:1882
 msgid ""
@@ -3662,7 +3654,6 @@ msgstr ""
 "Hettinger; :issue:`1861`.)"
 
 #: ../Doc/whatsnew/2.6.rst:2291
-#, fuzzy
 msgid ""
 "The :mod:`select` module now has wrapper functions for the Linux :c:func:`!"
 "epoll` and BSD :c:func:`!kqueue` system calls. :meth:`modify` method was "
@@ -3672,7 +3663,7 @@ msgid ""
 "Heimes; :issue:`1657`.)"
 msgstr ""
 "El módulo :mod:`select` tiene ahora funciones de envoltura para las llamadas "
-"al sistema Linux :c:func:`epoll` y BSD :c:func:`kqueue`. Se ha añadido el "
+"al sistema Linux :c:func:`!epoll` y BSD :c:func:`!kqueue`. Se ha añadido el "
 "método :meth:`modify` a los objetos :class:`poll` existentes; ``pollobj."
 "modify(fd, eventmask)`` toma un descriptor de fichero o un objeto de fichero "
 "y una máscara de evento, modificando la máscara de evento registrada para "
@@ -3733,7 +3724,6 @@ msgstr ""
 "`PySignal_SetWakeupFd`, para establecer el descriptor."
 
 #: ../Doc/whatsnew/2.6.rst:2327
-#, fuzzy
 msgid ""
 "Event loops will use this by opening a pipe to create two descriptors, one "
 "for reading and one for writing.  The writable descriptor will be passed to :"
@@ -3746,7 +3736,7 @@ msgstr ""
 "descriptores, uno de lectura y otro de escritura.  El descriptor de "
 "escritura se pasará a :func:`set_wakeup_fd`, y el descriptor de lectura se "
 "añadirá a la lista de descriptores monitorizados por el bucle de eventos "
-"mediante :c:func:`select` o :c:func:`poll`. Al recibir una señal, se "
+"mediante :c:func:`!select` o :c:func:`!poll`. Al recibir una señal, se "
 "escribirá un byte y se despertará el bucle de eventos principal, evitando la "
 "necesidad de hacer un sondeo."
 
@@ -3818,7 +3808,6 @@ msgstr ""
 "negociación TLS.  (Parche aportado por Bill Fenner; :issue:`829951`.)"
 
 #: ../Doc/whatsnew/2.6.rst:2366
-#, fuzzy
 msgid ""
 "The :mod:`socket` module now supports TIPC (https://tipc.sourceforge.net/), "
 "a high-performance non-IP-based protocol designed for use in clustered "
@@ -4804,7 +4793,6 @@ msgstr ""
 "incluyen:"
 
 #: ../Doc/whatsnew/2.6.rst:2983
-#, fuzzy
 msgid ""
 "Python now must be compiled with C89 compilers (after 19 years!).  This "
 "means that the Python source tree has dropped its own implementations of :c:"
@@ -4813,7 +4801,7 @@ msgid ""
 msgstr ""
 "Python ahora debe ser compilado con compiladores C89 (¡después de 19 "
 "años!).  Esto significa que el árbol de fuentes de Python ha abandonado sus "
-"propias implementaciones de :c:func:`memmove` y :c:func:`strerror`, que "
+"propias implementaciones de :c:func:`!memmove` y :c:func:`!strerror`, que "
 "están en la biblioteca estándar de C89."
 
 #: ../Doc/whatsnew/2.6.rst:2988
@@ -4863,7 +4851,6 @@ msgstr ""
 "y :c:func:`PyBuffer_Release`, así como algunas otras funciones."
 
 #: ../Doc/whatsnew/2.6.rst:3010
-#, fuzzy
 msgid ""
 "Python's use of the C stdio library is now thread-safe, or at least as "
 "thread-safe as the underlying library is.  A long-standing potential bug "
@@ -4882,13 +4869,13 @@ msgstr ""
 "potencial de larga data ocurría si un hilo cerraba un objeto de archivo "
 "mientras otro hilo estaba leyendo o escribiendo en el objeto.  En la versión "
 "2.6 los objetos archivo tienen un contador de referencias, manipulado por "
-"las funciones :c:func:`PyFile_IncUseCount` y :c:func:`PyFile_DecUseCount`.  "
-"Los objetos de archivo no pueden cerrarse a menos que el recuento de "
-"referencias sea cero. :c:func:`PyFile_IncUseCount` debe llamarse mientras se "
-"mantiene el GIL, antes de realizar una operación de E/S utilizando el "
-"puntero ``FILE *``, y :c:func:`PyFile_DecUseCount` debe llamarse "
-"inmediatamente después de recuperar el GIL. (Contribución de Antoine Pitrou "
-"y Gregory P. Smith)"
+"las funciones :c:func:`!PyFile_IncUseCount` y :c:func:`!"
+"PyFile_DecUseCount`.  Los objetos de archivo no pueden cerrarse a menos que "
+"el recuento de referencias sea cero. :c:func:`!PyFile_IncUseCount` debe "
+"llamarse mientras se mantiene el GIL, antes de realizar una operación de E/S "
+"utilizando el puntero ``FILE *``, y :c:func:`!PyFile_DecUseCount` debe "
+"llamarse inmediatamente después de recuperar el GIL. (Contribución de "
+"Antoine Pitrou y Gregory P. Smith)"
 
 #: ../Doc/whatsnew/2.6.rst:3023
 msgid ""
@@ -4966,7 +4953,6 @@ msgstr ""
 "(Contribución de Christian Heimes.)"
 
 #: ../Doc/whatsnew/2.6.rst:3061
-#, fuzzy
 msgid ""
 "Some macros were renamed in both 3.0 and 2.6 to make it clearer that they "
 "are macros, not functions.  :c:macro:`!Py_Size()` became :c:macro:"
@@ -4975,9 +4961,9 @@ msgid ""
 "still available in Python 2.6 for backward compatibility. (:issue:`1629`)"
 msgstr ""
 "Algunas macros han sido renombradas tanto en la 3.0 como en la 2.6 para "
-"dejar más claro que son macros y no funciones. :c:macro:`Py_Size()` se "
-"convierte en :c:macro:`Py_SIZE()`, :c:macro:`Py_Type()` se convierte en :c:"
-"macro:`Py_TYPE()`, y :c:macro:`Py_Refcnt()` se convierte en :c:macro:"
+"dejar más claro que son macros y no funciones. :c:macro:`!Py_Size()` se "
+"convierte en :c:macro:`Py_SIZE()`, :c:macro:`!Py_Type()` se convierte en :c:"
+"macro:`Py_TYPE()`, y :c:macro:`!Py_Refcnt()` se convierte en :c:macro:"
 "`Py_REFCNT()`. Las macros de mayúsculas y minúsculas siguen estando "
 "disponibles en Python 2.6 por compatibilidad con versiones anteriores. (:"
 "issue:`1629`)"
@@ -5378,8 +5364,8 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:1072
 msgid "universal newlines"
-msgstr ""
+msgstr "nuevas líneas universales"
 
 #: ../Doc/whatsnew/2.6.rst:1072
 msgid "What's new"
-msgstr ""
+msgstr "Qué hay de nuevo"
